--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
   },
